--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,7 +10,7 @@
 
         {{#unless nosearch}}
             <div class="search search--main">
-                {{>search-tabwrapper}}
+                {{>search-tabwrapper param=states}}
             </div>
         {{/unless}}
 
