--- a/templates/views/partials/search-tabwrapper.hbs
+++ b/templates/views/partials/search-tabwrapper.hbs
@@ -4,7 +4,6 @@
 
   <input id="search-tab2" class="search-tab" type="radio" name="search-tabs">
   <label for="search-tab2" class="search-tab-label">Haltestelle</label>
-
-  {{>search-journey}}
+  {{>search-journey states=param}}
   {{>search}}
 </div>
