--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -42,7 +42,9 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css">
 
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/styles/nouislider.min.css">
     <link href="/styles/site.css" rel="stylesheet">
     
     {{#if gatid}}
@@ -134,7 +136,10 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="/js/jquery.sticky.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
+<script src="/js/nouislider.min.js"></script>
 <script src="/js/main.js"></script>
+
 
 <script>
     $(function () {
